Corrección en el formulario y actualización de dependencias

--- a/templates/index.html
+++ b/templates/index.html
@@ -67,7 +67,7 @@
     <div class="container">
         <h1>Guardar Enlaces</h1>
         
-        <form method="POST" action="/">
+        <form method="POST" action="{{ url_for('save') }}">
             <div class="form-group">
                 <input type="text" name="link" placeholder="Pega tu enlace aquí" required>
             </div>
